# EverywhereAI

./: LICENSE  README.md
contract/: foundry.toml
contract/src/: Agent.sol
sidecar/: Cargo.toml  README
sidecar/src/: Agent.json  main.rs  main.rs.geturl
web-client/: package-lock.json  package.json
web-client/src/app/: chain_info.ts  client.ts  linea-sepolia.ts  page.tsx
